:lipstick: - added sass utilities & theme

--- a/src/shared/components/Button/Button.module.scss
+++ b/src/shared/components/Button/Button.module.scss
@@ -1,6 +1,6 @@
-$color: red;
+@import '@styles';
 
 .Button {
-    background: #000;
-    color: $color;
+    @include bg-color(20);
+    @include bg-opacity(20);
 }
