:lipstick: - added create client modal

--- a/src/shared/layouts/ModalLayout/ModalLayout.module.scss
+++ b/src/shared/layouts/ModalLayout/ModalLayout.module.scss
@@ -1,7 +1,7 @@
 @import '@styles';
 
 .ModalLayout {
-    @include inset;
+    @include inset(fixed);
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
